# Cognisync

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  demo-walkthrough.md  execution-plan.md  graph-change-intelligence-plan.md  hosted-hardening-plan.md  hosted-research-review-and-reconcile-plan.md  ingest-gaps-plan.md  open-source-operations.md  operator-workflows.md  research-run-reconciliation-plan.md  research-step-hosted-orchestration-plan.md  review-ui-research-operator-plan.md
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md
examples/research-garden/: README.md
src/cognisync/: __init__.py  __main__.py  access.py  adapters.py  change_summaries.py  cli.py  collaboration.py  compile_flow.py  config.py  connectors.py  control_plane.py  corpus.py  demo.py  doctor.py  evaluation.py  exports.py  ingest.py  (+27 more)
tests/: test_access.py  test_adapters.py  test_ci_workflow.py  test_cli.py  test_collaboration.py  test_connectors.py  test_control_plane.py  test_exports.py  test_graph_intelligence.py  test_ingest_expanded.py  test_jobs_and_sync.py  test_notifications.py  test_observability.py  test_operations.py  test_planner_and_linter.py  test_release_metadata.py  test_review_queue.py  test_review_ui.py  test_runtime_contracts.py  test_scanner.py  test_search_and_renderers.py  test_sharing_and_scheduler.py  test_synthetic_data.py  test_workspace.py
(+17 files in other folders)
