[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cognisync"
version = "0.1.0"
description = "Filesystem-first framework for LLM-maintained knowledge bases"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Cognisync Contributors"},
]
keywords = ["llm", "knowledge-base", "markdown", "obsidian", "agent", "wiki"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries",
  "Topic :: Text Processing :: Markup",
]

[project.urls]
Homepage = "https://github.com/shrijacked/Cognisync"
Repository = "https://github.com/shrijacked/Cognisync"
Issues = "https://github.com/shrijacked/Cognisync/issues"

[project.scripts]
cognisync = "cognisync.cli:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
